--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar1 navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar1 navbar navbar-expand-lg navbar-light">
         <span class="dots">&#9898; &#32; &#9898; &#32; &#9898;</span>
         <form class="d-flex">
           <input
@@ -21,7 +21,9 @@
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="buttonSearch btn btn-outline-success" type="submit">
+            Search
+          </button>
         </form>
       </nav>
 
