--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar1 navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar1 navbar navbar-expand-lg navbar-light">
         <span class="dots">&#9898; &#32; &#9898; &#32; &#9898;</span>
         <form class="d-flex">
           <input
