--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="buttonSearch btn btn-outline-success" type="submit">
+            Search
+          </button>
         </form>
       </nav>
 
