--- a/lesson4/forms-lesson4.html
+++ b/lesson4/forms-lesson4.html
@@ -13,6 +13,8 @@
     />
   </head>
   <body>
+    <script src="lesson4.js"></script>
+
     <div class="d-flex align-items-center">
       <div class="container">
         <form class="needs-validation" novalidate>
