--- a/index.html
+++ b/index.html
@@ -45,76 +45,17 @@
       </header>
       <main>
         <div class="goods-list">
-          <div class="goods-item" v-for="good in filteredGoods">
-            <img
-              src="https://picsum.photos/200/300?random.jpg"
-              alt="item image"
-            />
-            <h3>{{ good.title }}</h3>
-            <p>{{ good.price }}</p>
-            <p class="pWithButton">
-              <a
-                class="goods-cartButton"
-                v-on:click="cart.addToCart(good)"
-                href="#"
-                >Add to cart</a
-              >
-            </p>
-          </div>
+          <goods-item
+            v-for="good in filteredGoods"
+            :good="good"
+            :cart="cart"
+          ></goods-item>
         </div>
         <h2 class="p-3" v-if="filteredGoods.length === 0">No goods found</h2>
       </main>
-
-      <div class="modal" tabindex="-1" role="dialog" id="modal">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Modal title</h5>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>Modal body text goes here.</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-primary">
-                Save changes
-              </button>
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
     <script src="script.js" defer></script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
