--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
           <div class="empty"></div>
           <div class="empty"></div>
           <div class="buttonDiv">
-            <button class="cart-button btn btn-outline-success" type="button">
+            <button
+              class="cart-button btn btn-outline-success"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasCart"
+            >
               Cart
             </button>
           </div>
@@ -53,9 +58,27 @@
         </div>
         <h2 class="p-3" v-if="filteredGoods.length === 0">No goods found</h2>
       </main>
+
+      <div class="offcanvas offcanvas-bottom" id="offcanvasCart">
+        <div class="offcanvas-header">
+          <h5>Your cart:</h5>
+          <button
+            type="button"
+            class="btn-close text-reset"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body items">...</div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
     <script src="script.js" defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
