--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             :good="cartElement.goodsItem"
             :quantity="cartElement.quantity"
           ></cart-item>
-          <div class="totalPrice">{{ cart.getPrice()}}</div>
         </div>
+        <div class="totalPrice p-2">Total price: {{ cart.getPrice()}}</div>
       </div>
     </div>
 
