--- a/index.html
+++ b/index.html
@@ -15,22 +15,7 @@
       <header>
         <nav class="navbar1 navbar navbar-expand-lg navbar-light">
           <span class="dots">&#9898; &#32; &#9898; &#32; &#9898;</span>
-          <form class="d-flex">
-            <input
-              class="formSearch form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-              v-model="searchLine"
-            />
-            <button
-              class="buttonSearch btn btn-outline-success"
-              type="submit"
-              v-on:click.stop.prevent="onSearch()"
-            >
-              Search
-            </button>
-          </form>
+          <search :search="onSearch"></search>
         </nav>
 
         <nav class="navbar2">
