--- a/index.html
+++ b/index.html
@@ -11,36 +11,83 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar1 navbar navbar-expand-lg navbar-light">
-        <span class="dots">&#9898; &#32; &#9898; &#32; &#9898;</span>
-        <form class="d-flex">
-          <input
-            class="formSearch form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="buttonSearch btn btn-outline-success" type="submit">
-            Search
-          </button>
-        </form>
-      </nav>
+    <div id="app">
+      <header>
+        <nav class="navbar1 navbar navbar-expand-lg navbar-light">
+          <span class="dots">&#9898; &#32; &#9898; &#32; &#9898;</span>
+          <form class="d-flex">
+            <input
+              class="formSearch form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+              v-model="searchLine"
+            />
+            <button
+              class="buttonSearch btn btn-outline-success"
+              type="submit"
+              v-on:click.stop.prevent="onSearch()"
+            >
+              Search
+            </button>
+          </form>
+        </nav>
 
-      <nav class="navbar2">
-        <div class="empty"></div>
-        <div class="empty"></div>
-        <div class="buttonDiv">
-          <button class="cart-button btn btn-outline-success" type="button">
-            Cart
-          </button>
+        <nav class="navbar2">
+          <div class="empty"></div>
+          <div class="empty"></div>
+          <div class="buttonDiv">
+            <button
+              class="cart-button btn btn-outline-success"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasCart"
+            >
+              Cart
+            </button>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="goods-list">
+          <goods-item
+            v-for="good in filteredGoods"
+            :key="good.id"
+            :good="good"
+            :cart="cart"
+          ></goods-item>
         </div>
-      </nav>
-    </header>
-    <main>
-      <div class="goods-list"></div>
-    </main>
+        <h2 class="p-3" v-if="filteredGoods.length === 0">No goods found</h2>
+      </main>
 
+      <div class="offcanvas offcanvas-bottom" id="offcanvasCart">
+        <div class="offcanvas-header">
+          <h5>Your cart:</h5>
+          <button
+            type="button"
+            class="btn-close text-reset"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body items">
+          <cart-item
+            v-for="cartElement in cart.itemsList"
+            :key="cartElement.goodsItem.id"
+            :good="cartElement.goodsItem"
+            :quantity="cartElement.quantity"
+          ></cart-item>
+        </div>
+        <div class="totalPrice p-2">Total price: {{ cart.getPrice()}}</div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
     <script src="script.js" defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
