--- a/src/public/index.html
+++ b/src/public/index.html
@@ -55,7 +55,7 @@
           ></button>
         </div>
         <div class="offcanvas-body">
-          <items :cart="cart"></items>
+          <cart-items :cart="cart"></cart-items>
         </div>
         <div class="totalPrice p-2">Total price: {{ cart.getPrice()}}</div>
       </div>
